# www.maxwell-lt.dev

./: Cargo.toml  build.rs  flake.nix
frontend/: node-packages.nix  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: About.css  About.tsx  App.tsx  Nav.tsx  ProjectCard.tsx  index.tsx
src/: env.rs  main.rs
