[package]
name = "personal_website"
description = "Web server backing https://maxwell-lt.dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"

[build-dependencies]
npm_rs = "0.2.1"
