[package]
name = "maxwell-lt-dev"
description = "Web server backing https://maxwell-lt.dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
structopt = "0.3.26"
rust-embed = "6.4.0"

[build-dependencies]
npm_rs = "0.2.1"
